# bg-remover

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: bg_remover.py
